--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,9 +6,9 @@
 
   <title>
     {{ if not .IsHome }}
-      {{ .Title }}
+     {{ .Title }} - {{ $.Site.Title }}
     {{ else }}
-      {{ $.Site.Title }}
+    {{ $.Site.Title }}
     {{ end }}
   </title>
 
