--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
-{{ partial "back_link.html" .}}
+
+<h1 class="site-title"><a href="{{ "/" | relURL }}">{{ $.Site.Title }}</a></h1>
+
+<!-- {{ partial "back_link.html" .}} -->
 
 <article>
     <p class="post-meta">
