--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -67,10 +67,12 @@ h6 {
 }
 
 .site-title a {
+  color: $black;
   text-decoration: none;
 }
 
 .site-title a:hover {
+  color: $black;
   text-decoration: underline;
 }
 
