--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -64,20 +64,16 @@ h6 {
 .site-title {
   background-color: rgb(254, 255, 166);
   padding: 0.3em 0.5em;
-}
 
-.site-title a {
-  color: $black;
-  text-decoration: none;
-}
+  a:link, a:visited, a:active {
+    color: $black;
+    text-decoration: none;
+  }
 
-.site-title a:hover {
-  color: $black;
-  text-decoration: underline;
-}
-
-.site-title a:visited {
-  color: $black;
+  a:hover {
+    color: $black;
+    text-decoration: underline;
+  }
 }
 
 hr {
