--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -65,13 +65,12 @@ h6 {
   background-color: rgb(254, 255, 166);
   padding: 0.3em 0.5em;
 
-  a:link, a:visited, a:active {
+  a, a:link, a:visited, a:active {
     color: $black;
     text-decoration: none;
   }
 
   a:hover {
-    color: $black;
     text-decoration: underline;
   }
 }
