--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -42,7 +42,7 @@ html {
 body {
   color: $black;
   font-family: monospace;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.4;
   margin: 0;
   min-height: 100%;
@@ -59,6 +59,14 @@ h4,
 h5,
 h6 {
   margin-top: 3rem;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.5em;
 }
 
 .site-title {
@@ -94,7 +102,7 @@ li {
 .w {
   max-width: 640px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 .toc {
@@ -137,9 +145,8 @@ td {
 code {
   color: $white;
   background: $black;
-  font-size: 80%;
+  font-size: 0.9rem;
   padding: 0.1em 0.2em;
-  font-size: 90%;
 }
 
 code.has-jax {
