--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,6 +2,14 @@
 @mixin dark-appearance {
   filter: invert(1);
 
+  pre {
+    filter: invert(1);
+  }
+  
+  pre {
+    filter: invert(1);
+  }
+  
   img {
     filter: invert(1);
 
@@ -24,6 +32,7 @@ body[a="dark"] {
 
 $black: #131313;
 $white: #ffffff;
+$yellow: rgb(254, 255, 166);
 
 // -------------------------------------------- //
 
@@ -70,7 +79,7 @@ h2 {
 }
 
 .site-title {
-  background-color: rgb(254, 255, 166);
+  background-color: $yellow;
   padding: 0.3em 0.5em;
 
   a, a:link, a:visited, a:active {
@@ -96,7 +105,7 @@ li {
 }
 
 *:target {
-  background: yellow;
+  background: $yellow;
 }
 
 .w {
@@ -124,7 +133,7 @@ hr {
 }
 
 pre {
-  background: black;
+  background-color: $black;
   padding: 1em;
   overflow-x: auto;
   /* Fix pre content overflowing parent without scroll bar */
