--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,17 +5,21 @@
   pre {
     filter: invert(1);
   }
-  
+
   pre {
     filter: invert(1);
   }
-  
+
   img {
     filter: invert(1);
 
     &.ioda {
       filter: invert(0);
     }
+  }
+
+  #raytracer-canvas {
+    filter: invert(1);
   }
 }
 
@@ -82,7 +86,10 @@ h2 {
   background-color: $yellow;
   padding: 0.3em 0.5em;
 
-  a, a:link, a:visited, a:active {
+  a,
+  a:link,
+  a:visited,
+  a:active {
     color: $black;
     text-decoration: none;
   }
@@ -90,6 +97,36 @@ h2 {
   a:hover {
     text-decoration: underline;
   }
+}
+
+#theme-toggle {
+  background: none;
+  border: 1px solid $black;
+  padding: 0.2em 0.5em;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-top: 0.5em;
+
+  &:hover {
+    background-color: $yellow;
+  }
+
+  .theme-toggle-light,
+  .theme-toggle-dark {
+    display: none;
+  }
+}
+
+body[a="light"] #theme-toggle .theme-toggle-light {
+  display: inline;
+}
+
+body[a="dark"] #theme-toggle .theme-toggle-dark {
+  display: inline;
+}
+
+body[a="auto"] #theme-toggle::before {
+  content: "⚙";
 }
 
 hr {
@@ -184,4 +221,35 @@ img {
 figcaption {
   text-align: center;
   opacity: 0.5;
+}
+
+// -------------- raytracer -------------- //
+#raytracer-loading {
+  font-style: italic;
+  width: 100%;
+  padding: 1rem;
+  text-align: center;
+  background-color: beige;
+}
+
+#raytracer-canvas {
+  max-width: 640px;
+  width: 100%;
+  height: auto;
+  display: block;
+
+  &.error {
+    color: #f00;
+  }
+}
+
+#yaml-input {
+  width: 100%;
+  max-width: 640px;
+  font-family: monospace;
+  margin-top: 1em;
+}
+
+#render-button {
+  margin-top: 0.5em;
 }
