--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 
 <h1 class="site-title"><a href="{{ "/" | relURL }}">{{ $.Site.Title }}</a></h1>
+{{- partial "theme_toggle.html" . -}}
 
 <!-- {{ partial "back_link.html" .}} -->
 
@@ -14,9 +15,9 @@
     <h1>{{ .Title }}</h1>
 
     {{ if .Params.toc }}
-        <aside {{ if .Params.tocBorder }} class="toc" {{ end }}>
-            {{ .TableOfContents }}
-        </aside>
+    <aside {{ if .Params.tocBorder }} class="toc" {{ end }}>
+        {{ .TableOfContents }}
+    </aside>
     {{ end }}
 
     {{ .Content }}
