--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,11 +3,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="noindex" />
-  {{ if .IsPage }} <meta name="description" content="{{ .Summary }}">  {{ end }}
+  {{ if .IsPage }}
+  <meta name="description" content="{{ .Summary }}"> {{ end }}
 
   <title>
     {{ if not .IsHome }}
-     {{ .Title }} - {{ $.Site.Title }}
+    {{ .Title }} - {{ $.Site.Title }}
     {{ else }}
     {{ $.Site.Title }}
     {{ end }}
@@ -17,7 +18,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="{{ $.Site.Params.favicon | relURL }}" />
   {{ $options := (dict "outputStyle" "compressed" "enableSourceMap" (not hugo.IsProduction)) }}
   {{ $sass := resources.Get "css/main.scss" }}
-  {{ $style := $sass | resources.ToCSS $options | resources.Fingerprint "sha512" }}
+  {{ $style := $sass | css.Sass $options | resources.Fingerprint "sha512" }}
   <link rel="stylesheet" href="{{ $style.Permalink | relURL }}" integrity="{{ $style.Data.Integrity }}" />
   {{ if .Params.mathjax }} {{ partial "mathjax.html" . }} {{ end }}
 </head>
