--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
 <h1 class="site-title"><a href="{{ "/" | relURL }}">{{ $.Site.Title }}</a></h1>
+{{- partial "theme_toggle.html" . -}}
 
 <!-- {{ partial "back_link.html" .}} -->
 
@@ -13,9 +14,9 @@
     <h1>{{ .Title }}</h1>
 
     {{ if .Params.toc }}
-        <aside {{ if .Params.tocBorder }} class="toc" {{ end }}>
-            {{ .TableOfContents }}
-        </aside>
+    <aside {{ if .Params.tocBorder }} class="toc" {{ end }}>
+        {{ .TableOfContents }}
+    </aside>
     {{ end }}
 
     {{ .Content }}
