--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -252,6 +252,7 @@ figcaption {
 
 #yaml-input {
   width: 100%;
+  padding: 0.5em 1em;
   max-width: 640px;
   font-family: monospace;
   margin-top: 1em;
