--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -101,7 +101,7 @@ h2 {
 
 #theme-toggle {
   background: none;
-  border: 1px solid $black;
+  border: none;
   padding: 0.2em 0.5em;
   cursor: pointer;
   font-size: 1rem;
@@ -228,36 +228,4 @@ img {
 figcaption {
   text-align: center;
   opacity: 0.5;
-}
-
-// -------------- raytracer -------------- //
-#raytracer-loading {
-  font-style: italic;
-  width: 100%;
-  padding: 1rem;
-  text-align: center;
-  background-color: beige;
-}
-
-#raytracer-canvas {
-  max-width: 640px;
-  width: 100%;
-  height: auto;
-  display: block;
-
-  &.error {
-    color: #f00;
-  }
-}
-
-#yaml-input {
-  width: 100%;
-  padding: 0.5em 1em;
-  max-width: 640px;
-  font-family: monospace;
-  margin-top: 1em;
-}
-
-#render-button {
-  margin-top: 0.5em;
 }
